--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
 				<muleVersion>${mule.version}</muleVersion>
 				<username>${anypoint.username}</username>
 				<password>${anypoint.password}</password>
-				<env>${env}</env>
+				<environment>${env}</environment>
 				<applicationName>${appname}</applicationName>
 				<businessGroup>${business}</businessGroup>
 				<workerType>${vCore}</workerType>
