--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,12 @@
 			<version>1.0.2</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+		    <groupId>com.mulesoft.munit</groupId>
+            <artifactId>munit-remote</artifactId>
+            <version>2.3.4</version>
+            <scope>test</scope>
+         </dependency>
 	</dependencies>
 
 	<repositories>
