--- a/pom.xml
+++ b/pom.xml
@@ -60,12 +60,14 @@
 					</execution>
 				</executions>
 				<configuration>
+					<runtimeVersion>4.3.0-20210119</runtimeVersion>
 					<coverage>
-						<runCoverage>true</runCoverage>
-						<formats>
-							<format>html</format>
-						</formats>
-					</coverage>
+					<runCoverage>true</runCoverage>
+					<formats>
+<format>console</format>
+<format>html</format>
+</formats>
+</coverage>
 				</configuration>
 			</plugin>
 		</plugins>
