--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,7 @@
 					</execution>
 				</executions>
 				<configuration>
-					<runtimeVersion>4.3.0-20210119</runtimeVersion>
+					<runtimeVersion>4.3.0</runtimeVersion>
 					<coverage>
 					<runCoverage>true</runCoverage>
 					<formats>
