--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,7 @@
 				<groupId>com.mulesoft.munit.tools</groupId>
 				<artifactId>munit-maven-plugin</artifactId>
 				<version>${munit.version}</version>
+				<extensions>true</extensions>
 				<executions>
 					<execution>
 						<id>test</id>
