--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-		<app.runtime>4.3.0</app.runtime>
+		<app.runtime>4.3.0-20210322</app.runtime>
 		<mule.maven.plugin.version>3.5.1</mule.maven.plugin.version>
 		<munit.version>2.3.4</munit.version>
 	</properties>
@@ -61,7 +61,7 @@
 					</execution>
 				</executions>
 				<configuration>
-					<runtimeVersion>4.3.0</runtimeVersion>
+					<runtimeVersion>4.3.0-20210322</runtimeVersion>
 					<coverage>
 					<runCoverage>true</runCoverage>
 					<formats>
